# farm

./: .gitignore  CMakeLists.txt  README.md  farm.cpp  farm.h  farm.qrc  main.cpp
qml/: SelectProfile.ui.qml  window.qml
src/: farm.cpp  farm.h  main.cpp
src/data/: CMakeLists.txt  DBGameSets.cpp  DBGameSets.h  DatabaseHelper.cpp  DatabaseHelper.h  RomsetProfile.cpp  RomsetProfile.h  databasehelper.cpp  databasehelper.h  datastruct.h  romprofile.cpp  romprofile.h  setcontainers.cpp  setcontainers.h  setobjects.cpp  setobjects.h
src/gui/: CMakeLists.txt  FarmMain.cpp  FarmMain.h  Ui_MainWindow.h  farm.cpp
src/gui/qml/: UI.js  example.qml  window.qml
src/utils/: CMakeLists.txt  Datparser.cpp  Datparser.h  FolderParser.cpp  FolderParser.h  setanalyzer.cpp  setanalyzer.h
src/workers/: CMakeLists.txt  Populator.cpp  Populator.h
ui_qt/: mainwindow.ui
